--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -33,14 +34,27 @@ android {
     viewBinding {
         enabled = true
     }
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 dependencies {
 
-    implementation('androidx.room:room-runtime:2.4.3')
-    annotationProcessor('androidx.room:room-compiler:2.4.3')
+    implementation "androidx.room:room-runtime:2.5.0-alpha02"
+    kapt "org.xerial:sqlite-jdbc:3.36.0"
+    kapt "androidx.room:room-compiler:2.5.0-alpha02"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    
 
-    implementation('androidx.lifecycle:lifecycle-livedata-ktx:2.4.0')
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.5.0-alpha02"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
