--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,16 +44,15 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.0-alpha02"
     kapt "org.xerial:sqlite-jdbc:3.36.0"
     kapt "androidx.room:room-compiler:2.5.0-alpha02"
-    // ViewModel
+
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    // LiveData
+
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
-    // Coroutines
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     
 
-    // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.5.0-alpha02"
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -67,5 +66,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "com.google.zxing:core:3.2.1"
+    implementation "com.journeyapps:zxing-android-embedded:4.3.0"
 
 }
